nextcloud/templates/metrics-deployment.yaml
---
# Source: nextcloud/templates/metrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-nextcloud-metrics
  labels:
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-3.5.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: metrics
  template:
    metadata:
      annotations:
        null
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: metrics
    spec:
      containers:
      - name: metrics-exporter
        image: "xperimental/nextcloud-exporter:0.6.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9205
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
