nextcloud/templates/metrics-service.yaml
---
# Source: nextcloud/templates/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-nextcloud-metrics
  labels:
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-3.5.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
  annotations: 
    prometheus.io/port: "9205"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9205
    targetPort: metrics
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: metrics
